# markview

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  eslint.config.js  install-claude-plugin.sh  package-lock.json  package.json  start-brain.sh  turbo.json
.changeset/: config.json
.claude/: launch.json  settings.local.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  publish-core.yml  publish-mcp.yml  publish-react.yml  publish-webcomponent.yml  release-desktop.yml  release.yml  sync-portfolio.yml
.husky/: pre-push
apps/context-injector/: README.md  background.js  build.mjs  content.css  content.js  manifest.json  offscreen.html  offscreen.js  package.json  popup.html  popup.js  tsconfig.json
apps/context-vault/: README.md  dashboard-preload.js  main.js  mcp-bridge-testable.js  mcp-bridge.js  package.json  privacy-dashboard.html  signaling.js  welcome-preload.js  welcome.html
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: file_handler.rs  main.rs
apps/extension/: README.md  build-extension.sh  fix-inline-scripts.py  manifest.json  package.json
apps/hub/: package.json  tsconfig.json
davakasasi/: CLAUDE.md
mockups/: merged-product-vision.html
(+829 files in other folders)
