[package]
name = "markview-desktop"
version = "0.1.0"
description = "MarkView — native macOS markdown viewer"
authors = ["Ahmet Barış Günaydın <abgunaydin94@gmail.com>"]
license = "AGPL-3.0"
repository = "https://github.com/abgnydn/markview"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
